Add Lab 3 files

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="orange">#BA5A31</color>
     <color name="yellow">#FBD87F</color>
     <color name="black">#FF000000</color>
+    <color name="pale_grey">#20000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="pie1">#1383CE</color>
     <color name="pie2">#6209A4</color>
