--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="pie2">#6209A4</color>
     <color name="pie3">#F6D838</color>
     <color name="pie4">#5F5F5F</color>
+    <color name="red">#FF0000</color>
 </resources>
