--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,13 +4,15 @@
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/red_br</item>
         <item name="colorPrimaryVariant">@color/pink_main</item>
-        <item name="colorOnPrimary">@color/blue_dk</item>
+        <item name="colorOnPrimary">@color/pink_main</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/orange</item>
+        <item name="colorSecondary">@color/pink_main</item>
         <item name="colorSecondaryVariant">@color/yellow</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:buttonCornerRadius" tools:targetApi="p">3dp</item>
+        <item name="android:colorControlNormal" tools:targetApi="p">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 
