--- a/app/src/main/res/layout/activity_lab1.xml
+++ b/app/src/main/res/layout/activity_lab1.xml
@@ -26,6 +26,7 @@
             android:id="@+id/tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
             android:background="?attr/colorPrimaryVariant" />
     </com.google.android.material.appbar.AppBarLayout>
 
