--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="pink_main">#F8C7D7</color>
+    <color name="pink_light">#FAE7ED</color>
     <color name="blue_dk">#344966</color>
     <color name="red_br">#36070B</color>
     <color name="orange">#BA5A31</color>
